--- a/nginx.yaml
+++ b/nginx.yaml
@@ -4,7 +4,7 @@
   tasks:
   - name: install nginx
     ansible.builtin.dnf:
-      name: niginx
+      name: nginx
       state: latest
   - name:
     ansible.builtin.service:
