--- a/play.yaml
+++ b/play.yaml
@@ -2,9 +2,11 @@
   hosts: localhost
   tasks:
   - name: play1 and task 1
-    ansible.builtin.debug: msg:"hello world"
+    ansible.builtin.debug: 
+    msg: "hello world"
 - name: Play 2
   hosts: localhost
   tasks:
   - name: play2 and task 1
-    ansible.builtin.debug: msg:"hello, this is kiran"
+    ansible.builtin.debug: 
+    msg: "hello, this is kiran"
