--- a/vars_prompt.yaml
+++ b/vars_prompt.yaml
@@ -2,8 +2,9 @@
   hosts: localhost
   vars_prompt:
   - name: course
-    prompt: please enter course name
-    private: false 
+      prompt: please enter course name
+      private: false 
+  vars:
     course: "Ansible"
     Trainer: "Siva Kumar"
     Duration: "120 hours"
