--- a/inventory.ini
+++ b/inventory.ini
@@ -6,6 +6,6 @@
 localhost
 
 [localhost:vars]
-course: Azure
-trainer: Einstein
-duration: 1000 hours
+course=Azure
+trainer=Einstein
+duration=1000 hours
