--- a/vars-arg.yaml
+++ b/vars-arg.yaml
@@ -3,4 +3,4 @@
   tasks:
   - name: print msg
     ansible.builtin.debug:
-      msg: "Hi this is kiran I'm learning {{course}}, my teacher is {{teacher}}"
+      msg: Hi this is kiran I'm learning {{course}}, my teacher is {{teacher}}
