--- a/conditions.yaml
+++ b/conditions.yaml
@@ -8,7 +8,7 @@
 
   - name: msg
     ansible.builtin.debug:
-      msg: {{USER}}
+      msg: "{{USER}}""
   - name: user add
     ansible.builtin.command: useradd expense
     when: USER.rc != 0
