--- a/conditions.yaml
+++ b/conditions.yaml
@@ -14,3 +14,6 @@
   - name: user add
     ansible.builtin.command: useradd expense
     when: USER.rc != 0
+  - name: print a msg
+    ansible.builtin.command:
+      msg: "Hi Guys"
