--- a/fitler.yaml
+++ b/fitler.yaml
@@ -31,5 +31,5 @@
     numbers: [1,5,3,5,3,3,5,2,5,7,7,8,3,8]
   tasks:
   - name: remove duplicates
-    ansible.builting.debug:
+    ansible.builtin.debug:
       msg: "{{ numbers | unique}}"
