--- a/fitler.yaml
+++ b/fitler.yaml
@@ -32,4 +32,4 @@
   tasks:
   - name: remove duplicates
     ansible.builtin.debug:
-      msg: "{{ numbers | unique}}"
+      msg: "{{ numbers | items2dict}}"
