--- a/fitler.yaml
+++ b/fitler.yaml
@@ -28,7 +28,11 @@
 - name: unique
   hosts: localhost
   vars:
-    numbers: [1,5,3,5,3,3,5,2,5,7,7,8,3,8]
+    items=[
+      {'key': 'course', 'value':'Devops AWS'}
+      {'key': 'trainer', 'value': 'God'}
+      {'key': 'Duration', 'value': 233 hours}
+    ]
   tasks:
   - name: remove duplicates
     ansible.builtin.debug:
