--- a/fitler.yaml
+++ b/fitler.yaml
@@ -35,4 +35,4 @@
   tasks:
   - name: remove duplicates
     ansible.builtin.debug:
-      msg: "{{ numbers | items2dict}}"
+      msg: "{{ items | items2dict}}"
