--- a/loops.yaml
+++ b/loops.yaml
@@ -5,9 +5,8 @@
   - name: loops
     ansible.builtin.dnf:
       name: "{{item}}"
-      state: latest
-      enabled: yes
+      state: item.state
     loop:
-    - mysql
-    - nginx
-    - postfix
+    - { name: 'mysql', state: 'latest'  }
+    - { name: 'nginx', state: 'absent'  }
+    - { name: 'postfix', state: 'absent'  }
