--- a/loops.yaml
+++ b/loops.yaml
@@ -4,8 +4,8 @@
   tasks:
   - name: loops
     ansible.builtin.dnf:
-      name: "{{item}}"
-      state: item.state
+      name: "{{item.name}}"
+      state: "{{item.state}}"
     loop:
     - { name: 'mysql', state: 'latest'  }
     - { name: 'nginx', state: 'absent'  }
